--- a/linux/foot/dank-colors.ini
+++ b/linux/foot/dank-colors.ini
@@ -3,6 +3,7 @@ foreground=ede1d4
 background=18130b
 selection-foreground=ede1d4
 selection-background=614000
+cursor = 18130b f2be6e
 
 regular0=18130b
 regular1=e2497c
@@ -20,3 +21,5 @@ bright4=fbcd8a
 bright5=a96b3e
 bright6=8e773c
 bright7=ffffff
+
+dim-blend-towards=black
