feat(zed): Update config to latest version

--- a/shared/zed/settings.json
+++ b/shared/zed/settings.json
@@ -3,7 +3,9 @@
 		"provider": "copilot",
 	},
 	"agent": {
-		"always_allow_tool_actions": true,
+		"tool_permissions": {
+			"default": "allow",
+		},
 		"default_profile": "write",
 		"default_model": {
 			"provider": "copilot_chat",
