feat: custom theme

--- a/linux/foot/dank-colors.ini
+++ b/linux/foot/dank-colors.ini
@@ -1,25 +1,25 @@
 [colors]
-foreground=ede1d4
-background=18130b
-selection-foreground=ede1d4
-selection-background=614000
-cursor = 18130b f2be6e
+foreground=f2e0ca
+background=1a1206
+selection-foreground=f2e0ca
+selection-background=7d2b21
+cursor = 1a1206 ffb4a8
 
-regular0=18130b
-regular1=e2497c
-regular2=96d66e
-regular3=dbaf7b
-regular4=b37923
-regular5=b59666
-regular6=f2be6e
-regular7=abb2bf
-bright0=5c6370
-bright1=e05f8d
-bright2=a8e086
-bright3=e8c397
-bright4=fbcd8a
-bright5=a96b3e
-bright6=8e773c
-bright7=ffffff
+regular0=1a1206
+regular1=ff7572
+regular2=99ff7f
+regular3=ffe472
+regular4=f29c8f
+regular5=76362c
+regular6=ffb4a8
+regular7=fff1ef
+bright0=a59a99
+bright1=ffa09f
+bright2=b7ffa5
+bright3=ffeea5
+bright4=ffbfb5
+bright5=ffcac2
+bright6=ffddd7
+bright7=fff9f8
 
 dim-blend-towards=black
