--- a/linux/foot/foot.ini
+++ b/linux/foot/foot.ini
@@ -50,7 +50,7 @@ pad=15x12                             # optionally append 'center'
 include=/home/erika/dotfiles/linux/foot/dank-colors.ini
 
 [colors]
-# alpha=1.0
+alpha=0.85
 # foreground=dcdccc
 # background=111111
 # regular0=222222  # black
