--- a/shared/zed/settings.json
+++ b/shared/zed/settings.json
@@ -25,11 +25,11 @@
 	"debugger": {
 		"dock": "right",
 	},
+	"semantic_tokens": "combined",
 	"notification_panel": {
 		"dock": "left",
 	},
 	"rounded_selection": false,
-	"theme": "Zoegi Dark",
 	"gutter": {
 		"min_line_number_digits": 3,
 	},
@@ -37,85 +37,15 @@
 		"ui_font_size": 18,
 		"buffer_font_size": 16,
 	},
-	"icon_theme": "Colored Zed Icons Theme Light",
-	"experimental.theme_overrides": {
-		"background": "#1e1e1e",
-		"border.variant": "#191919",
-		"border.selected": "#ec9dc2",
-		"hidden": "#dddddd",
-		"editor.background": "#191919",
-		"editor.foreground": "#dddddd",
-		"panel.background": "#121212",
-		"tab_bar.background": "#191919",
-		"tab.inactive_background": "#121212",
-		"tab.active_background": "#191919",
-		"editor.gutter.background": "#191919",
-		"toolbar.background": "#191919",
-		"title_bar.background": "#121212",
-		"title_bar.inactive_background": "#191919",
-		"border": "#303030",
-		"players": [{ "selection": "#ec9dc233" }],
-		"panel.focused_border": "#ccc",
-		"hint": "#ffffff6f",
-		"hint.background": "#ffffff10",
-		"status_bar.background": "#121212",
-		"editor.indent_guide_active": "#ffffff3f",
-		"panel.indent_guide_active": "#ffffff3f",
-		"elevated_surface.background": "#121212",
-		"terminal.background": "#191919",
-		"terminal.foreground": "#c0c0c0",
-		"terminal.ansi.black": "#333333",
-		"terminal.ansi.blue": "#7098d4",
-		"terminal.ansi.bright_black": "#666666",
-		"terminal.ansi.bright_blue": "#80a8e4",
-		"terminal.ansi.bright_cyan": "#7ac8d0",
-		"terminal.ansi.bright_green": "#76c3a5",
-		"terminal.ansi.bright_magenta": "#f0abcb",
-		"terminal.ansi.bright_red": "#f48484",
-		"terminal.ansi.bright_white": "#f6f6f6",
-		"terminal.ansi.bright_yellow": "#f2d98e",
-		"terminal.ansi.cyan": "#6ab8c0",
-		"terminal.ansi.green": "#66b395",
-		"terminal.ansi.magenta": "#f0abcb",
-		"terminal.ansi.red": "#e47474",
-		"terminal.ansi.white": "#dddddd",
-		"terminal.ansi.yellow": "#e2c97e",
-		"syntax": {
-			"property": { "color": "#F5CA7F" },
-			"link_uri": { "color": "#8bc3c9" },
-			"function": { "color": "#8bc3c9" },
-			"identifier": { "color": "#8bc3c9" },
-			"attribute": {
-				"color": "#8bc3c9f",
-			},
-
-			"keyword": { "color": "#f0abcb" },
-			"label": { "color": "#f0abcb" },
-			"punctuation.list_marker": { "color": "#f0abcb" },
-			"punctuation.special": { "color": "#f0abcb" },
-			"selector.pseudo": { "color": "#f0abcb" },
-			"string.escape": { "color": "#f0abcb" },
-			"tag": { "color": "#f0abcb" },
-			"title": { "color": "#f0abcb" },
-			"variable.special": { "color": "#ea88b5" },
-			"variant": { "color": "#f0abcb" },
-			"namespace": { "color": "#f4a580" },
-			"selector": { "color": "#f4a580" },
-			"type": { "color": "#f4a580" },
-			"type.unit": { "color": "#f4a580" },
-			"comment": {
-				"color": "#808080",
-				"font_style": "normal",
-				"font_weight": null,
-			},
-			"comment.doc": {
-				"color": "#595959",
-				"font_style": "italic",
-			},
-			"variable": {
-				"color": "#e6e6e6",
-			},
-		},
+	"theme": {
+		"light": "Thorn Light (Transparent)",
+		"dark": "Thorn Dark (Transparent)",
+		"mode": "system",
+	},
+	"icon_theme": {
+		"light": "Colored Zed Icons Theme Light",
+		"dark": "Colored Zed Icons Theme Dark",
+		"mode": "system",
 	},
 	"indent_guides": {
 		"active_line_width": 2,
